bin_PROGRAMS = diag qmc
diag_SOURCES = matrix.h matrix.cpp hamiltonian.h hamiltonian.cpp fileinput.h fileinput.cpp statevector.h statevector.cpp random.h random.cpp diag.cpp
qmc_SOURCES = fileinput.h fileinput.cpp operatorlist.h operatorlist.cpp random.h random.cpp statevector.h statevector.cpp qmc.cpp
